PIP-61 #comment add examples
