# src/app.js
@@ -16,6 +16,11 @@ const router = express.Router({});
 
 var customers = [];
 
+router.get('/ping', function (req, res) {
+    res.status(200)
+        .send("pong");
+});
+
 router.get('/swagger', function (req, res) {
     res.sendFile(__dirname + '/swagger.yml', function(err) {
         if (err) {
